# AEngine

./: .gitignore  CMakeLists.txt  Config.h  Engine.cpp  Engine.h  Game.cpp  Game.h  Level.cpp  Level.h  LevelSettings.h  MacrosLibrary.cpp  MacrosLibrary.h  Object.cpp  Object.h  README.md  Renderer.cpp  Renderer.h  World.h  configure.cpp
Structs/: AVideoParams.h  ELogTypes.h  LevelSettings.h
resources/shaders/: color.frag  color.vert
src/: Callbacks.cpp  Callbacks.h  Config.h  Engine.cpp  Engine.h  GL_Callbacks.cpp  Game.cpp  Game.h  Level.cpp  Level.h  MacrosLibrary.cpp  MacrosLibrary.h  Object.cpp  Object.h  Renderer.cpp  Renderer.h  example.cpp  main.cpp
src/Math/: AVector.h  Mat4.cpp  Mat4.h
src/Render/: Renderer.cpp  Renderer.h  ShaderProgram.h  Shape.cpp  Shape.h  Sprite.h  Texture.h  Window.h
src/Render/OpenGL/: GL_ShaderProgram.cpp  GL_Sprite.cpp  GL_Texture.cpp  GL_Window.cpp  ShaderProgram.cpp  ShaderProgram.h
src/Render/Windows/: WIN_Window.cpp
src/Resources/: ResourceManager.cpp  ResourceManager.h
src/Structs/: AGState.h  AVector.h  AVideoParams.h  ColorRGBA.h  EColorModes.h  EForm.h  EKeys.h  ELogTypes.h  EShaderTypes.h  LevelSettings.h
